# DKUtil

./: !ProjectUpdate.ps1  !Update.ps1  .clang-format  .clang-format-ignore  .editorconfig  .gitignore  AnotherBiteTheConfig.ini  CMakeLists.txt  CMakePresets.json  CPP.HINT  DKUtil.vcxproj  DKUtil.vcxproj.filters  DKUtilDebugger.ini  DKUtilDebugger.json  DKUtilDebugger.toml  GUI.h  GUI.hpp  Hash.hpp  Hook.h  Hook.hpp  README.md  Template.hpp  build-release.ps1  format-all.ps1  package-lock.json  package.json  pnpm-lock.yaml  vcpkg.json
.github/workflows/: deploy.yml  maintenance.yml
Powershell/: !BuildPapyrus.ps1
Tests/DKUtil.CommonLib.Test/: !QuickUpdate.ps1  DKUtil.CommonLib.Test.vcxproj  DKUtil.CommonLib.Test.vcxproj.filters  Hooks.cpp  exports.def  version.rc
Tests/DKUtil.CommonLib.Test/include/: Hooks.h  version.h
Tests/DKUtil.CommonLib.Test/src/: main.cpp
Tests/DKUtil.SKSE64.Test/: DKUtil.SKSE64.Test.vcxproj  DKUtil.SKSE64.Test.vcxproj.filters
Tests/DKUtil.SKSE64.Test/include/: Hooks.h
Tests/DKUtil.SKSE64.Test/src/: Hooks.cpp  main.cpp
cmake/: CLibCustomCMakeLists.txt.in  Plugin.h.in  Version.h.in  config.cmake.in
docs/: Config.md  Extra.md  Format.ps1  Hook.md  Logger.md  Utility.md  index.md
docs/.vitepress/: config.ts
docs/config/: config-workflow.md  data-types.md  examples.md  file-helpers.md  references.md  schema-whatnot.md  setup-proxy.md
docs/config/snippets/: NoEnchantmentRestrictionRemake.md  SF_NativeAutoHDR.md  YouCanSleepRemake.md
docs/dkutil/: about.md  compilation.md  references.md
docs/extra/: skse.md
docs/hooks/: address-fetching.md  asm-patch.md  callsite-logging.md  cave-hook.md  hook-handles.md  hooking-with-dkutil.md  lto-enabled-hook.md  memory-edit.md  relocation.md  trampoline.md  vtable-swap.md
docs/logger/: macros.md  setup.md
docs/utils/: templates.md
include/: DKHook.hpp  Hash.hpp  Template.hpp
include/DKUtil/: Config.hpp  ENB.hpp  Extra.hpp  GUI.hpp  Hash.hpp  Hook.hpp  Logger.hpp  Plugin.hpp  Utility.hpp
include/DKUtil/Impl/: PCH.hpp
include/DKUtil/Impl/Config/: Data.hpp  Ini.hpp  Json.hpp  Proxy.hpp  Schema.hpp  Shared.hpp  Toml.hpp
include/DKUtil/Impl/Extra/: xconsole.hpp  xserialize.hpp
include/DKUtil/Impl/Extra/Serialization/: exception.hpp  interface.hpp  mock.hpp  resolver.hpp  shared.hpp
include/DKUtil/Impl/Hook/: API.hpp  Assembly.hpp  Internal.hpp  JIT.hpp  Shared.hpp  Shared_Compat.hpp  Trampoline.hpp
include/DKUtil/Impl/Hook/Internal/: ASMPatch.hpp  CaveHook.hpp  IATHook.hpp  RelHook.hpp  VMTHook.hpp
include/DKUtil/Impl/Utility/: enumeration.hpp  numbers.hpp  string.hpp  templates.hpp
src/: main.cpp
test/: ConfigTest.h  GUITest.h  HookTest.h  LoggerTest.h  PCH.h  PluginTest.cpp  SSEExtraTest.h  UtilityTest.h
test/configs/: AnotherBiteTheConfig.ini  DKUtilDebugger.ini  DKUtilDebugger.toml  Schema_SC.txt
